<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        tools:viewBindingIgnore="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:backgroundTint="@color/backgroundColor"
        tools:context=".NewContact">

        <EditText
            android:id="@+id/firstNameEditText"
            style="@style/editTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/alatsi"
            android:hint="@string/firstName"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="42sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.406"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/lastNameEditText"
            style="@style/editTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/alatsi"
            android:hint="@string/lastName"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="42sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameEditText"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/phoneNumberEditText"
            style="@style/editTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/alatsi"
            android:hint="@string/phoneNumber"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="42sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/occupationEditText"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/occupationEditText"
            style="@style/editTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:fontFamily="@font/alatsi"
            android:hint="@string/occupation"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="42sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameEditText"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:clickable="true"
            android:contentDescription="@string/save"
            android:focusable="true"
            app:backgroundTint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:srcCompat="@drawable/ic_baseline_check_24"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/backButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:clickable="true"
            android:contentDescription="@string/back"
            android:focusable="true"
            app:backgroundTint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="ImageContrastCheck" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView"
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:layout_marginTop="32dp"
            android:adjustViewBounds="true"
            android:background="@color/teal_700"
            android:contentDescription="@string/person"
            android:padding="3dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:roundPercent="1"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            app:srcCompat="@drawable/ic_baseline_person_24"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp"
            tools:ignore="ImageContrastCheck" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="176dp"
            android:adjustViewBounds="true"
            android:background="@color/white"
            android:contentDescription="@string/person"
            android:scaleType="centerCrop"
            android:theme="@style/shapeableImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.725"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:roundPercent="1"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            app:srcCompat="@drawable/ic_baseline_add_a_photo_24"
            tools:ignore="ImageContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>